--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naze",
+  "name": "𝓐𝓹𝓾𝓼𝓼𝓪 𝓫𝓸𝓽۞🥀",
   "version": "1.2.3",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
